styles.css
body{
    font-family: 'Tahoma';
    text-align: center;
}

div{
    background-color: rgb(245, 222, 239);
}

p{
    margin-right: 150px;
    margin-left: 150px;
}

h1, h2, h3 {
    color: rgb(39, 11, 86);
}
h1{
    font-size: 36px;
}
h2{
    font-size: 24px;
    background-color: lightgreen;
}
h3{
    font-size: 18px;
    background-color: lightgreen;
}

footer{
    color: rgb(40, 127, 49);
    text-align: center;    
}

img { 
    width: auto; 
    height: 200px; 
} 
.logo-img { 
    width: 300px; 
    height:auto;
} 

.leftjustify{
    text-align: left;
}
.rightjustify{
    text-align: right;
}
#special{
    margin-right: 5px;
    margin-left: 5px;
}

